# adacs_job_controller

./: .clang-format  .codeclimate.yml  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  Settings.h  docker-compose.yaml  main.cpp  runserver.sh
HTTP/: File.cpp  (+4 more)
legacy/: .valgrind.suppressed  Application.cppm  CMakeLists.txt  IApplication.ixx  main.cpp
legacy/Cluster/tests/: cluster_db_tests.cpp  file_download_tests.cpp
legacy/HTTP/tests/: file_tests.cpp  job_tests.cpp
legacy/Interfaces/: IClusterManager.ixx  IHttpService.h  IMessage.h  IServer.ixx
legacy/Lib/: FollyTypes.h  GeneralUtils.cppm  jobserver_schema.ixx  segvcatch.h
legacy/WebSocket/: WebSocketServer.cppm
legacy/tests/: test_file_upload_transfer.cpp  utils.h
legacy/tests/fixtures/: DatabaseFixture.h
legacy/utils/keyserver/: keyserver.py  requirements.txt
legacy/utils/schema/: convert_schema_to_module.py  generate_ddl.sh
legacy/utils/schema/jobserver/: apps.py  models.py
legacy/utils/schema/jobserver/migrations/: 0004_job_sent.py  0007_auto_20200311_2254.py  0008_auto_20200311_2314.py  0009_auto_20200408_0303.py  0011_clusteruuid.py  0015_job_application.py  0016_migrate_bilby_jobs.py  0018_auto_20210706_0128.py  0023_clusterjob_deleted_clusterjob_deleting.py
src/: .clang-tidy  .env.template  .valgrind.suppressed  Application.cppm  CMakeLists.txt  Cargo.toml  IApplication.ixx  README.md  Settings.h  Settings.ixx  build_release.sh  main.cpp  run_tests.sh
src/Cluster/: Cluster.cpp  Cluster.cppm  Cluster.h  ClusterManager.cpp  ClusterManager.cppm  ClusterManager.h  FileDownload.cpp  FileDownload.cppm  FileDownload.h  FileUpload.cppm
src/Cluster/tests/: background_threads_tests.cpp  cluster_db_tests.cpp  cluster_manager_tests.cpp  cluster_tests.cpp  file_download_tests.cpp  file_upload_tests.cpp  ping_pong_tests.cpp  test.crt  test.crt.h  test.key  test.key.h
src/DB/: ClusterDB.cpp  ClusterDB.cppm  ClusterDB.h  MySqlConnector.h  MySqlConnector.ixx  sBundleJob.cpp  sBundleJob.cppm  sBundleJob.h  sClusterJob.cpp  sClusterJob.cppm  sClusterJob.h  sClusterJobStatus.cpp  sClusterJobStatus.cppm  sClusterJobStatus.h
src/HTTP/: File.cpp  File.cppm  HttpServer.cpp  HttpServer.cppm  HttpServer.h  HttpUtils.cpp  HttpUtils.cppm  HttpUtils.h  IHttpServer.ixx  Job.cpp  Job.cppm
src/HTTP/Utils/: HandleFileList.cpp  HandleFileList.cppm  HandleFileList.h
src/HTTP/tests/: file_filter_files.cpp  file_tests.cpp  httpserver_tests.cpp  job_tests.cpp
src/Interfaces/: ICluster.h  ICluster.ixx  IClusterManager.h  IClusterManager.ixx  IDatabase.h  IHttpService.h  IMessage.h  IMessageHandler.h  IServer.ixx
src/Lib/: FileTypes.h  FollyTypes.h  GeneralUtils.cpp  GeneralUtils.cppm  GeneralUtils.h  GlobalState.cpp  GlobalState.h  JobStatus.ixx  TestingMacros.h  jobserver_schema.h  jobserver_schema.ixx  segvcatch.cpp  segvcatch.h  stacktrace.cpp  x86_64-signal.h
src/Lib/Messaging/: Message.cpp  Message.cppm  Message.h  tests.cpp
src/Lib/shims/: date_shim.h  sqlpp_shim.h
src/WebSocket/: IWebSocketServer.ixx  WebSocketServer.cpp  WebSocketServer.cppm  WebSocketServer.h
src/cmake/: FindMySQL.cmake
src/docker/: Dockerfile  docker-compose.test.yaml  docker-compose.yaml
src/docker/scripts/: runtests.sh
src/src/: app.rs  lib.rs  main.rs
src/src/cluster/: cluster.rs  file_download.rs  file_upload.rs  manager.rs  mod.rs  ssh.rs  traits.rs
src/src/config/: access_secrets.rs  clusters.rs  settings.rs
src/src/db/: cluster_db.rs  mod.rs  models.rs  pool.rs  schema.rs  transaction.rs
src/src/db/entities/: bundle_job.rs  cluster_job.rs  cluster_job_status.rs  cluster_uuid.rs  file_download.rs  file_list_cache.rs  job.rs  job_history.rs  mod.rs
src/src/db/migration/: m20250514_000001_create_job.rs  m20250514_000002_create_job_history.rs  m20250514_000003_create_file_download.rs  m20250514_000004_create_file_list_cache.rs  m20250514_000005_create_cluster_job.rs  m20250514_000006_create_cluster_job_status.rs  m20250514_000007_create_bundle_job.rs  m20250514_000008_create_cluster_uuid.rs  migrator.rs  mod.rs
src/src/http/: auth.rs  file.rs  job.rs  mod.rs  server.rs  utils.rs
src/src/protocol/: constants.rs  message.rs  mod.rs  types.rs
src/src/utils/: general.rs  uuid.rs
src/src/websocket/: server.rs
src/tests/: fix_mocks.py  fix_mocks2.py  test_cluster_db_dispatch.rs  test_cluster_db_sql.rs  test_cluster_logic.rs  test_cluster_manager.rs  test_cluster_message_flow.rs  test_cpp_equivalent_integration.rs  test_edge_cases.rs  test_edge_cases_integration.rs  test_file_download_backpressure.rs  test_file_handlers.rs  test_file_list_caching.cpp  test_file_transfer.cpp  test_file_upload_transfer.cpp  test_http_handlers.rs  test_http_load_and_benchmarks.rs  test_job_handlers.rs  test_ltk.rs  test_ltk_security.rs  test_main.cpp  test_migrations.rs  test_performance_and_load.rs  test_protocol_compatibility.rs  test_real_integration.rs  test_websocket_real_connection.rs  test_websocket_server.rs  utils.cpp  utils.h
src/tests/common/: mod.rs
src/tests/fixtures/: DatabaseFixture.h  HttpClientFixture.h  HttpServerFixture.h  WebSocketClientFixture.h  WebSocketServerFixture.h
src/utils/: clang-tidy-to-code-climate.py  cluster_config.json
src/utils/keyserver/: .gitignore  keyserver.py  main.cpp  requirements.in  requirements.txt
src/utils/keyserver/tests/: test_keyserver.py
src/utils/schema/: convert_schema_to_module.py  generate_ddl.sh  jobserver_schema.h  requirements.in  requirements.txt  schema.ddl
src/utils/schema/jobserver/: models.py
src/utils/schema/jobserver/migrations/: 0002_auto_20200309_2140.py  0005_remove_job_sent.py  0010_jobhistory_what.py  0012_auto_20200517_2234.py  0013_migrate_job_completion.py  0014_auto_20200518_2357.py  0017_filelistcache.py  0019_auto_20220720_0052.py  0020_alter_clusteruuid_id_alter_filedownload_id_and_more.py  0021_alter_filedownload_job_alter_filedownload_user_and_more.py  0022_bundlejob_clusterjob_clusterjobstatus.py  0022_clusterjob_clusterjobstatus.py  0023_bundlejob.py
src/utils/schema/schema/: settings.py
(+88 files in other folders)
