[package]
name = "adacs_job_controller"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# These casting warnings are intentional conversions between protocol/database types
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
# Style preferences that would require significant refactoring
struct_excessive_bools = "allow"
too_many_lines = "allow"

[features]
default = []
test-support = ["dep:mockall"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket server
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["query"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1", features = ["sqlx-mysql", "sqlx-sqlite"] }

# Rate limiting
tower_governor = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"

# Concurrency
dashmap = "6"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
bytes = "1"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"
async-stream = "0.3.6"
mockall = { version = "0.13", optional = true }
http-body-util = "0.1"
russh = "0.60"
tempfile = "3"

[dev-dependencies]
mockall = "0.13"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
dashmap = "6"
futures = "0.3"
tokio = { version = "1", features = ["test-util"] }
adacs_job_controller = { path = ".", features = ["test-support"] }
